# ember

./: .cursorrules  .gitignore  Cargo.toml  README.md
.agent/workflows/: debug.md  develop.md  new-crate.md  patterns.md  pr.md  review.md  test.md
crates/ember_2d/: Cargo.toml
crates/ember_2d/examples/: animation_demo.rs  shapes_demo.rs  sprite_demo.rs
crates/ember_2d/src/: atlas.rs  batch.rs  lib.rs  pipeline.rs  plugin.rs  shapes.rs  sprite.rs  texture.rs
crates/ember_animation/: Cargo.toml
crates/ember_animation/examples/: animation_demo.rs
crates/ember_animation/src/: lib.rs  plugin.rs  sprite_animation.rs  state_machine.rs  tween.rs
crates/ember_assets/: Cargo.toml
crates/ember_assets/examples/: assets_demo.rs
crates/ember_assets/src/: handle.rs  image_loader.rs  lib.rs  loader.rs  plugin.rs  server.rs  storage.rs
crates/ember_core/: Cargo.toml
crates/ember_core/examples/: ecs_demo.rs
crates/ember_core/src/: app.rs  archetype.rs  component.rs  entity.rs  event.rs  lib.rs  plugin.rs  query.rs  resource.rs  schedule.rs  system.rs  time.rs  world.rs
crates/ember_gui/: Cargo.toml
crates/ember_gui/examples/: gui_demo.rs
crates/ember_gui/src/: context.rs  font.rs  layout.rs  lib.rs  overlay.rs  plugin.rs  render.rs  style.rs  widgets.rs
crates/ember_input/: Cargo.toml
crates/ember_input/examples/: input_demo.rs
crates/ember_input/src/: keyboard.rs  lib.rs  mouse.rs  plugin.rs
crates/ember_render/: Cargo.toml
crates/ember_render/examples/: hello_window.rs
crates/ember_render/src/: camera.rs  clear_pass.rs  context.rs  graph.rs  lib.rs  window.rs
crates/ember_scene/: Cargo.toml
crates/ember_scene/examples/: ron_scene_demo.rs  scene_demo.rs
crates/ember_scene/src/: hierarchy.rs  lib.rs  loader.rs  plugin.rs  scene.rs  transform.rs
docs/: milestones.md  workflow-changelog.md
docs/architecture/: overview.md  tech-decisions.md
docs/tasks/: milestone-01-ecs-core.md  milestone-02-render-graph.md  milestone-03-2d-rendering.md  milestone-04-input-assets-scene.md  milestone-05-gui.md  milestone-05-lighting-particles.md  milestone-06-audio-physics.md  milestone-06-showcase.md  milestone-07-game-ai.md  milestone-07-lighting-particles.md  milestone-08-audio-physics.md  milestone-08-scripting.md  milestone-09-editor.md  milestone-09-npc-ai.md  milestone-10-scripting.md  milestone-10-stretch.md  milestone-11-editor.md  milestone-12-ai-mcp.md  milestone-13-stretch.md
